fix: video overflow bug

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
   z-index: -1;
-  filter: brightness(50%);
+  filter: brightness(36%);
 }
 @media (max-aspect-ratio: 16/9) {
   .videoTag {
